--- a/all.css
+++ b/all.css
@@ -495,6 +495,77 @@ hr.hr-lg {
 .tab-pane {
 	transition: 0;
 }
+
+/**
+* Grids page parts
+*/
+
+main.grids-main > nav#pageSidenav {
+	padding-bottom: 2rem;
+	--_activeColor: var(--bs-pink);
+	/* --_activeColor: var(--myBlue_cons); */
+}
+main.grids-main > nav#pageSidenav > #scrollSpy > li:nth-child(1),
+main.grids-main > nav#pageSidenav > #scrollSpy > li:nth-child(1) a {
+	border-top-color: transparent;
+}
+main.grids-main > nav#pageSidenav > #scrollSpy .list-group-item {
+	border-inline: none;
+	background-color: transparent;
+	color: var(--black_var);
+}
+main.grids-main > nav#pageSidenav > #scrollSpy li > a:hover {
+	text-decoration: underline;
+}
+main.grids-main > nav#pageSidenav > #scrollSpy li > a.active {
+    font-weight: bold;
+	border-color: transparent;
+    border-right: 4px solid var(--appColor_cons);
+	background-color: transparent;
+	color: var(--_activeColor);
+	transition: font-weight var(--trans), color var(--trans), border-right-width var(--trans);
+}
+main.grids-main > nav#pageSidenav > #scrollSpy li > a.active::before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 0%;
+	translate: -50% -50%;
+	width: .5rem;
+	aspect-ratio: 1;
+	border-radius: 50%;
+	background-color: var(--white_var);
+	outline: 7px solid var(--_activeColor);
+	z-index: -1;
+}
+
+@media screen and (min-width: 992px) {
+	main.grids-main {
+		display: grid;
+		grid-template-columns: minmax(15rem, 20%) auto;
+		grid-template-rows: auto auto auto;
+	}
+	main.grids-main > nav#pageHeader {
+		grid-area: 1 / 2 / 1 / 2;
+	}
+	main.grids-main > nav#pageSidenav {
+		grid-area: 1 / 1 / 3 / 2;
+		position: sticky;
+		top: 60px;
+		height: 100vh;
+		height: 100dvh;
+		min-height: 300px;
+		overflow-x: visible;
+		border-right: 3px solid var(--black4_cons);
+		isolation: isolate;
+	}
+	main.grids-main > #pageMainContent {
+		grid-area: 2 / 2 / 3 / 2;
+	}
+}
+
+/* Grids page parts */
+
 .pageHere {
 	position: fixed;
 	top: 0;
@@ -7581,6 +7652,51 @@ html::-webkit-scrollbar-thumb:hover,
 }
 .big-link-element:active {
 	animation: clickDown .2s 1;
+}
+/* Toask (custom alert) */
+
+.myToast {
+	position: fixed;
+	bottom: 20px;
+	left: 50%;
+	width: max-content;
+	max-width: 90%;
+	transform: translateX(-50%);
+	padding: 10px 20px;
+	border-radius: 5px;
+	background-color: var(--black1);
+	color: var(--white);
+	text-align: center;
+	box-shadow: 0 2px 5px var(--black3_cons);
+	animation: slideIn 0.5s ease-out forwards, fadeOut 0.5s ease-out 2.5s forwards;
+	z-index: 1032;
+}
+
+@media screen and (min-width: 576px) {
+	.myToast {
+		width: fit-content;
+	}
+}
+
+
+@keyframes slideIn {
+	from {
+		transform: translateX(-50%) translateY(100%);
+	}
+
+	to {
+		transform: translateX(-50%) translateY(0);
+	}
+}
+
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+	}
 }
 
 /* Custom elements */
