added new technical skill

--- a/styles/about.css
+++ b/styles/about.css
@@ -38,8 +38,8 @@
 .teck-skills-levels > .sass-level {
     background-color: #ce649c;
 }
-.teck-skills-levels > .figma-level {
-    background-color: #f24c1c;
+.teck-skills-levels > .angularJs-level {
+    background-color: #dd1a18;
 }
 .teck-skills-levels > .php-level {
     background-color: #777bb3;
