--- a/styles/projects.css
+++ b/styles/projects.css
@@ -5,6 +5,7 @@
     min-height: 315px;
     animation: zoomInBack 1s 1;
 }
+
 .project-elem .abs-images > img:nth-child(2) {
     width: fit-content;
     max-width: 35%;
@@ -15,9 +16,15 @@
     transition: var(--trans);
     z-index: 1;
 }
+
 .project-elem .abs-images > img:nth-child(2):hover {
     box-shadow: 0 0 .5rem .25rem var(--primaryClr2);
 }
+
+.project-elem .project-info {
+    line-height: 1.5rem;
+}
+
 /* @media screen and (min-width: 992px) {
     .project-elem .d-lg-flex {
         flex-direction: row-reverse;
@@ -25,6 +32,16 @@
 } */
 
 .site-technologies {
-    border: 1px solid var(--secondaryClr);
+    /* border: 1px solid var(--secondaryClr); */
     border-radius: 0 0 10px 10px;
+    color: var(--black2);
+}
+
+.site-technologies li {
+    border-radius: 100vw;
+    padding: .35rem 1rem;
+    font-size: small;
+    text-wrap: nowrap;
+    background-color: var(--secondaryClr);
+    color: var(--bs-light);
 }
